chore: First pass over backport